deploy/overlays/dev/nextgen-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextgen-ingress
  namespace: nextgen
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /signup
            pathType: Prefix
            backend:
              service:
                name: apiservice
                port:
                  number: 9000
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: apiservice
                port:
                  number: 9000
